--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,33 @@
 {
-  "short_name": "Reddit Purple",
+  "manifest_version": 3,
+
   "name": "Reddit Purple",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
+  "description": "Show linked Reddit posts",
+  "version": "1.0",
+
+  "action": {
+    "default_popup": "index.html",
+    "default_title": "Open the popup"
+  },
+  "icons": {
+    "16": "Snoo_16.png",
+    "32": "Snoo_32.png",
+    "48": "Snoo_48.png",
+    "128": "Snoo_128.png"
+  },
+  "permissions": [
+    "webNavigation"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background": {
+    "service_worker": "app/background.js",
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "js": ["app/content.js"],
+      "matches": [
+        "*://*.reddit.com/r/*/comments/*"
+      ]
+    }
+  ]
 }
